--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -2,7 +2,8 @@
 
 ===Verb===
 {{en-verb|head=[[miss]] [[out]]|misses out|missing out|missed out}}
-# {{context|idiomatic|lang=en}} To miss an experience or lose an opportunity, etc. that should not be missed.
+
+# To miss an experience or lose an opportunity, etc. that should not be missed.
 #: ''Anybody who does not try the homemade ice cream is really '''missing out'''.''
 #: ''I think he's going to '''miss out''' on the opportunity to date her if he doesn't hurry.''
 #* {{quote-news
@@ -14,6 +15,9 @@
 |url=http://www.bbc.co.uk/sport/0/football/17878435
 |page=
 |passage=The final started with £85m worth of striking talent on the bench as Carroll was a Liverpool substitute and Chelsea's Fernando Torres '''missed out''' on a starting place against his former club.}}
+# {{lb|en|chiefly|British}} To [[leave out]], to [[omit]].
+#* '''2010''' November 8, ''Meanwhile, in the TARDIS...'' (mini-episodes included in the fifth season of ''{{w|Doctor Who}}''):
+#*: DOCTOR (as the TARDIS is showing pictures of his previous companions): '''Miss out''' the metal dog, why don't you?
 
 ====Translations====
 {{trans-top|to miss something that should not be missed}}
