t+pt:[[máximo]] ([[WT:EDIT|Assisted]]) <maximum#29526834>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -95,6 +95,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 {{trans-mid}}
 * Italian: {{t+|it|massimo|m}}
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai|sc=Jpan}}, {{t|ja|極大|tr=きょくだい, kyokudai|sc=Jpan}}
+* Portuguese: {{t+|pt|máximo}}
 * Russian: {{t+|ru|максимальный|tr=maksimálʹnyj|sc=Cyrl}}
 * Spanish: {{t+|es|máximo}}
 * Telugu: {{t|te|గరిష్ఠ|tr=garishTha}}
