t+stq:[[taks]] ([[WT:EDIT|Assisted]]) <badger#29633785>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -107,6 +107,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Russian: {{t+|ru|барсу́к|m}}
 * Sami: [[mievri]]
 * Sardinian: {{t|sc|tassu}}, {{t|sc|cane de ribu}}
+* Saterland Frisian: {{t|stq|taks}}
 * Scottish Gaelic: {{t|gd|broc|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|jазавац|m}}
