--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -230,6 +230,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 {{trans-top|the @ symbol}}
 * Georgian: {{t|ka|ძაღლუკა}}
 {{trans-mid}}
+* Polish: {{t+|pl|małpa|f}}
 * Russian: {{t|ru|собачка}}
 {{trans-bottom}}
 
