--- a/en/m/mousepox.775844.wikitext
+++ b/en/m/mousepox.775844.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|-}}
 
-# A [[skin]] [[disease]] of [[mice]], similar to [[smallpox]], caused by the [[poxvirus]] ''[[Ectromelia virus ]]''
+# A [[skin]] [[disease]] of [[mice]], similar to [[smallpox]], caused by the [[poxvirus]] species {{taxlink|Ectromelia virus|species|noshow=1}}.
 
 [[hu:mousepox]]
 [[zh:mousepox]]
