--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -64,7 +64,7 @@ See [[jennet]]
 ===Anagrams===
 * [[tenge#English|tenge]]
 
-[[Category:en:Mammals]]
+[[Category:en:Viverrids]]
 
 [[ca:genet]]
 [[de:genet]]
