--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -4,16 +4,20 @@
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˈmaɪ.kɹoʊ/|lang=en}}
 
-===Adjective===
+===Etymology 1===
+
+====Adjective====
 {{en-adj}}
 
 # [[small|Small]], relatively small; {{non-gloss definition|used to contrast levels of the noun modified}}.
 #: ''At the '''micro''' level he was a good manager. At the macro level he failed.''
 
-====Antonyms====
+=====Antonyms=====
 * [[macro]]
 
-===Noun===
+===Etymology 2===
+
+====Noun====
 {{en-noun}}
 
 # {{context|computing|dated|lang=en}} {{form of|short form|microcomputer|lang=en}}
@@ -21,6 +25,18 @@
 #*: If you can possibly afford to spend a few more pounds then you should move up into the next price bracket, where the potential of the home '''micro''' starts to be realised.
 #* '''1986''', Rachael Smith, ''Bomb Jack'' (video game review) in ''Your Sinclair'' issue 5, May 1986
 #*: So what sort of hero is this bounding, bomb collecting midget? The answer is an arcade hero - and now he's let loose in your '''micro''' courtesy of conversion kings, Elite.
+
+===Etymology 3===
+
+====Noun====
+{{en-noun|-}}
+
+# {{lb|en|gaming slang}} [[micromanagement]]
+
+====Verb====
+{{en-verb|pres_3sg2=microes}}
+
+# {{lb|en|gaming slang}} to [[micromanage]]
 
 ----
 
