--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -45,6 +45,11 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 # Anything lacking firmness or solidity; a cheat or fraud; an empty project.
 #* Shakespeare
 #*: Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth.
+# {{context|Cockney rhyming slang|lang=en}} A [[laugh]]. (''also:'' [[bubble bath]])
+#: ''Are you having a '''bubble'''?!''
+
+====Synonyms====
+* (a laugh) [[giraffe]], [[bubble bath]]
 
 ====Related terms====
 {{rel-top3|Terms derived from ''bubble'' (noun)}}
