--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -15,7 +15,7 @@
 
 ===Proper noun===
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
-{{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=Yisra'él}}
+{{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=yisra'él}}
 
 # [[Israel]], {{gloss|the alternative name of [[Jacob]]}}
 # the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
