--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -25,7 +25,7 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 # {{context|obsolete|lang=en}} A [[lock]] or [[curl]] of hair.
 # {{context|obsolete|lang=en}} A [[gibbet]].
 # {{context|obsolete|lang=en}} A support beam consisting of a post with a cross-beam resting upon it; a bracket or truss consisting of a vertical piece, a horizontal piece, and a strut.
-# A [[shepherd's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
+# A shepherd's crook; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
 #* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press, ''Psalms'' 23-4, page 583:
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 # A bishop's staff of office.
