t+vec:[[fis-cio]] t+eo:[[fajfo]] ([[WT:EDIT|Assisted]]) <whistle#29917331>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -119,6 +119,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Catalan: {{t|ca|xiulada|f}}
 * Danish: {{t|da|fløjt|n}}
 * Dutch: {{t|nl|fluittoon|m}}
+* Esperanto: {{t|eo|fajfo}}
 * Finnish: {{t+|fi|vihellys}}, {{t|fi|vislaus}}
 * French: {{t+|fr|sifflement|m}}, {{t+|fr|sifflements|m-p}}
 * German: {{t+|de|Pfeifen|n}}, {{t+|de|Pfiff|m}}
@@ -138,6 +139,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Spanish: {{t+|es|silbato|m}}, {{t+|es|pitido|m}}, {{t+|es|chiflido|m}}, {{t+|es|pitada|f}}
 * Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t|sv|vissling|c}}
+* Venetian: {{t+|vec|fis-cio|m}}
 {{trans-bottom}}
 
 {{trans-top|sound similar to the sound made by whistling}}
