--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -13,8 +13,6 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
 
-# KangXi radical 74 [[Index:Chinese radical/月|月]]
-
 ====Derived characters====
 * [[Index:Chinese radical/月]]
 
@@ -35,6 +33,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 |m=yuè
 |c=jyut6
 |h=pfs=ngie̍t
+|md=nguŏk
 |mn=gua̍t/gue̍h/ge̍h
 |w=5hhyq,5hhioq
 |mc=y
