--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -37,6 +37,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Japanese: {{t|ja|遅くてもやらないよりまし|tr=おそくてもやらないよりまし, osokutemo yaranai yori mashi|sc=Jpan}} <!-- to check {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}} -->
 * Latin: {{t|la|potius sero quam nunquam}}
 * Norwegian: {{t|no|bedre sent enn aldri}}, {{t|no|bedre seint enn aldri}}
+* Persian: {{t|fa|دیر آید و شیر آید|tr=Dir ajæd o schir ajæd|sc=fa-Arab}}
 * Polish: {{t+|pl|lepiej późno niż wcale}}
 * Portuguese: {{t|pt|antes tarde do que nunca}}
 * Romanian: {{t|ro|mai bine mai târziu decât niciodată}}
