--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -95,9 +95,10 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Czech: {{t+|cs|mlýn|m}}
 * Danish: {{t+|da|mølle|c}}
 * Dutch: {{t+|nl|molen|m}}
-* Erzya: {{t|myv|ведьгев|tr=vedgev}}
+* Erzya: {{t|myv|ведьгев}}
 * Esperanto: {{t|eo|muelilo}}
 * Estonian: {{t|et|veski}}
+* Faroese: {{t|fo|mylla|f}}, {{t|fo|mylna|f}}
 * Finnish: {{t+|fi|mylly}}
 * French: {{t+|fr|moulin|m}}
 * Friulian: {{t|fur|mulìn|m}}
@@ -192,7 +193,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Estonian: {{t|et|tehas}}
 * Finnish: {{t+|fi|tehdas}}
 * French: {{t+|fr|manufacture|f}}, {{t+|fr|usine|f}}, {{t+|fr|fabrique|f}}
-* German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} [[Papiermühle]] {{g|f}} {{qualifier|for paper}}
+* German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n|sc=Grek}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
 * Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
@@ -236,7 +237,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 
 {{checktrans-top}}
 * Interlingua: {{t-check|ia|fabrica}}, {{t-check|ia|molino}}
-* {{ttbc|csb}}: [[młin]] {{g|m}} (3)
+* {{ttbc|csb}}: {{t|csb|młin|m}} (3)
 {{trans-bottom}}
 
 ===Etymology 2===
