/* English */ <Swiss chard#29941815>

--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun|-}}
 
-# ''Beta vulgaris'' var. ''cicla'': an edible leafy vegetable.
+# {{taxlink|Beta vulgaris var. cicla|species|noshow=1}}: an edible leafy vegetable.
 
 ====Synonyms====
 * [[chard]]
