--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -22,6 +22,7 @@
 * Japanese: {{t+|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
 * Romanian: {{t+|ro|fârtat|m}}
 * Russian: {{t+|ru|закадычный друг|m|tr=zakadýčnyj drug|sc=Cyrl}}, {{t|ru|близкий друг|m|tr=blízkij drug|sc=Cyrl}}
+* Scottish Gaelic: {{t|gd|goistidh|m}} {{qualifier|male}}, {{t|gd|bana-ghoistidh|m}} {{qualifier|female}}
 * Vietnamese: {{t+|vi|tri kỷ}}
 {{trans-bottom}}
 
