--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -8,7 +8,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * {{audio|En-us-minimum.ogg|Audio (US)|lang=en}}
 
 ===Noun===
-{{en-noun|s|minima}}
+{{en-noun|minima|s}}
 
 # The [[lowest]] [[limit]].
 #: ''We prefer candidates with a '''minimum''' of 4 years experience in the field.''
