--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -16,7 +16,7 @@
 * [[paraphilic infantilism]]
 
 ===References===
-* Laplanche and Pontalis 30, 1973.
+* Laplanche, J. and Pontalis, J.-B. (1973). ''The Language of Psycho-Analysis''. W. W. Norton and Company. ISBN 0-393-01105-4, p. 30.
 
 ===Anagrams===
 * [[talismanic#English|talismanic]]
