adverb, really? <chances are#30000401>

--- a/en/c/chances are.742275.wikitext
+++ b/en/c/chances are.742275.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Adverb===
-'''[[chances]] [[are]]'''
+{{en-adv|-}}
 
 # {{context|idiomatic|lang=en}} It is [[likely]] that, it is [[probable]] that
 #: ''If you leave before 7, '''chances are''' you'll miss the traffic.''
@@ -11,5 +11,3 @@
 {{trans-mid}}
 * German: {{t|de|es ist wahrscheinlich}}
 {{trans-bottom}}
-
-[[Category:English adverbs]]
