--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -124,9 +124,9 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t+|jbo|ractu}}
+{{trans-mid}}
 * Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
 * Luxembourgish: {{t|lb|kanéngchen}}
-{{trans-mid}}
 * Macedonian: {{t|mk|заjак|m|tr=zajak}}
 * Malay:
 *: Rumi: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
@@ -152,6 +152,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Pitjantjatjara: {{t|pjt|malu}}
 * Polish: {{t+|pl|królik|m}}
 * Portuguese: {{t+|pt|coelho|m}}
+* Purepecha: {{t|pua|auani}}
 * Romani: {{t|rom|shoshoy|m}}, {{t|rom|shoshni|f}}
 * Romanian: {{t+|ro|iepure}}, {{t|ro|iepure de vizuină}}
 * Romansch: {{t|rm|cunigl}}
