--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -1,13 +1,13 @@
 ==Greek==
 
 ===Etymology===
-From {{term|Ιταλία|tr=Italia||Italy|lang=el}}, from {{etyl|la|el}} ''[[Italia]]'', + adjectival suffix {{term|-ικός|tr=ikos|lang=el}}.
+From {{term|Ιταλία||Italy|lang=el}}, from {{etyl|la|el}} ''[[Italia]]'', + adjectival suffix {{term|-ικός|lang=el}}.
 
 ===Pronunciation===
 * {{IPA|/italiˈkos/|lang=el}}
 
 ===Adjective===
-{{el-adj|f=ιταλική|n=ιταλικό|tr=italikós}}
+{{el-adj|f=ιταλική|n=ιταλικό}}
 
 # [[Italian]], pertaining to [[Italy]]
 
@@ -15,7 +15,7 @@ From {{term|Ιταλία|tr=Italia||Italy|lang=el}}, from {{etyl|la|el}} ''[[Ita
 {{el-decl-adj|dec=ός-ή-ό|stem=ιταλικ|nopio=1}}
 
 ====Related terms====
-:''see:'' {{l|el|Ιταλία|tr=Italía|gloss=Italy|g=f}}
+{{el-see|Ιταλία|gloss=Italy|g=f}}
 
 ====See also====
 * {{l|el|[[πλάγιος|πλάγιοι]] [[χαρακτήρες]]|πλάγιοι χαρακτήρες|g=m-p|gloss=italics, italic characters}}
