t+ro:[[portativ]] t+ro:[[personal]] ([[WT:EDIT|Assisted]]) <staff#30133131>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -109,6 +109,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
 * Polish: {{t|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
+* Romanian: {{t+|ro|portativ|n}}
 * Russian: {{t|ru|нотный стан|m|tr=nótnyj stan}}
 * Scottish Gaelic: {{t|gd|cliabh|m}}
 * Spanish: {{t+|es|varas|f-p}}, {{t+|es|pauta|f}}, {{t+|es|pentagrama|f}}
@@ -133,6 +134,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
 * Polish: {{t+|pl|personel|m}}, {{t|pl|pracownicy|p}}
 * Portuguese: {{t+|pt|pessoal|m}}
+* Romanian: {{t+|ro|personal|n}}
 * Russian: {{t+|ru|персонал|m|tr=personál}}, {{t+|ru|кадр|alt=кадры|m-p|tr=kádry}}, {{t+|ru|штат|m|tr=štat|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|особље|n|sc=Cyrl}}
