--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,25 +8,25 @@
 * {{homophones|lang=en|mil}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=ang}}.
+From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 
 ====Noun====
 {{en-noun}}
 
 # A grinding apparatus for substances such as grains, seeds, etc.
-#: ''Pepper has a stronger flavor when it is ground straight from a '''mill'''.''
+#: {{usex|Pepper has a stronger flavor when it is ground straight from a '''mill'''.|lang=en}}
 # The building housing such a grinding apparatus.
-#: ''My grandfather worked in a '''mill'''.''
+#: {{usex|My grandfather worked in a '''mill'''.|lang=en}}
 # A machine used for expelling the juice, sap, etc., from vegetable tissues by pressure, or by pressure in combination with a grinding, or cutting process.
-#: ''a cider '''mill'''; a cane '''mill'''''
+#: {{usex|a cider '''mill'''; a cane '''mill'''|lang=en}}
 # A machine for grinding and polishing.
-#: ''a lapidary '''mill'''''
+#: {{usex|a lapidary '''mill'''|lang=en}}
 # A manufacturing plant for paper, steel, textiles, etc.
-#: ''a steel '''mill'''''
+#: {{usex|a steel '''mill'''|lang=en}}
 # A building housing such a plant.
 # An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
-# {{context|informal|lang=en}} an [[engine]] <!--http://oxforddictionaries.com/definition/english/mill-->
-# {{context|informal|lang=en}} a boxing match, [[fistfight]] <!--http://oxforddictionaries.com/definition/english/mill-->
+# {{label|en|informal}} an [[engine]] <!--http://oxforddictionaries.com/definition/english/mill-->
+# {{label|en|informal}} a boxing match, [[fistfight]] <!--http://oxforddictionaries.com/definition/english/mill-->
 #: {{quote-book|year=1914
 |year_published='''2009'''
 |edition=HTML
@@ -41,39 +41,37 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 |page=
 |passage=The name of the "white hope" against whom Billy was to go was sufficient to draw a fair house, and there were some there who had seen Billy in other fights and looked for a good '''mill'''.
 }}
-# {{context|die sinking|lang=en}} A hardened steel [[roller]] with a design in relief, used for imprinting a reversed copy of the design in a softer metal, such as copper.
-# {{context|mining|lang=en}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
-# {{context|mining|lang=en}} A passage underground through which ore is shot.
+# {{label|en|die sinking}} A hardened steel [[roller]] with a design in relief, used for imprinting a reversed copy of the design in a softer metal, such as copper.
+# {{label|en|mining}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
+# {{label|en|mining}} A passage underground through which ore is shot.
 # A [[milling cutter]].
-# {{context|trading card games|lang=en}} A card or deck that relies on the strategy of putting cards directly from the draw pile into the discard pile.
+# {{label|en|trading card games}} A card or deck that relies on the strategy of putting cards directly from the draw pile into the discard pile.
+
 [[Category:en:Magic: The Gathering]]
 
 =====Synonyms=====
 * {{sense|plant, building}} [[factory]], [[works]]
 
 =====Derived terms=====
-{{der-top}}
-* [[all grist to one’s mill]]
-* [[cog mill]]
-* [[miller]]
-* [[millhouse]]
-* [[milling]]
-* [[mill race]], [[millrace]]
-* [[millstone]]
-* [[mill wheel]], [[millwheel]]
-* [[paper mill]]
-* [[pecker mill]]
-{{der-mid}}
-* [[pulp mill]]
-* [[rice mill]]
-* [[rolling mill]]
-* [[run-of-the-mill]]
-* [[rumor mill]], [[rumour mill]]
-* [[steel mill]]
-* [[trouble at t' mill]]
-* [[watermill]]
-* [[windmill]]
-{{der-bottom}}
+{{der3|[[all grist to one’s mill]]
+|[[cog mill]]
+|[[miller]]
+|[[millhouse]]
+|[[milling]]
+|[[mill race]], [[millrace]]
+|[[millstone]]
+|[[mill wheel]], [[millwheel]]
+|[[paper mill]]
+|[[pecker mill]]
+|[[pulp mill]]
+|[[rice mill]]
+|[[rolling mill]]
+|[[run-of-the-mill]]
+|[[rumor mill]], [[rumour mill]]
+|[[steel mill]]
+|[[trouble at t' mill]]
+|[[watermill]]
+|[[windmill]]}}
 
 =====Translations=====
 {{trans-top|grinding apparatus}}
@@ -84,8 +82,8 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Asturian: {{t|ast|molín|m}}
 * Azeri: {{t+|az|dəyirman}}
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
-* Belarusian: {{t|be|млын|m|sc=Cyrl}}
-* Bulgarian: {{t+|bg|ме́лница|f|sc=Cyrl}}
+* Belarusian: {{t|be|млын|m}}
+* Bulgarian: {{t+|bg|ме́лница|f}}
 * Catalan: {{t+|ca|molí|m}}
 * Chechen: {{t|ce|хьер}}
 * Chinese:
@@ -103,11 +101,11 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * French: {{t+|fr|moulin|m}}
 * Friulian: {{t|fur|mulìn|m}}
 * Galician: {{t+|gl|muíño|m}}
-* Georgian: {{t|ka|წისქვილი|sc=Geor}}
+* Georgian: {{t|ka|წისქვილი}}
 * German: {{t+|de|Mühle|f}}
-* Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f|sc=Grek}}
+* Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f}}
 * Hebrew: {{t|he|טחנה|tr=takhánah}}
-* Hindi: {{t|hi|चक्की|f|tr=cakkī|sc=Deva}}
+* Hindi: {{t|hi|चक्की|f|tr=cakkī}}
 * Hungarian: {{t+|hu|malom}}
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
@@ -134,11 +132,11 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Portuguese: {{t|pt|moenda|f}}, {{t+|pt|moinho|m}}
 * Romanian: {{t+|ro|moară}}
 * Romansch: {{t|rm|mulin|m}}, {{t|rm|mulegn}}
-* Russian: {{t+|ru|ме́льница|f}}, {{t+|ru|дроби́лка|f|sc=Cyrl}}
+* Russian: {{t+|ru|ме́льница|f}}, {{t+|ru|дроби́лка|f}}
 * Sardinian: {{t|sc|molinu}}, {{t|sc|mulinu}}
 * Scottish Gaelic: {{t|gd|muileann|m|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|млин|m}}
+*: Cyrillic: {{t|sh|млин|m|sc=Cyrl}}
 *: Roman: {{t+|sh|mlin|m}}
 * Slovak: {{t|sk|mlyn|m}}
 * Slovene: {{t+|sl|mlin|m}}
@@ -148,7 +146,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Tatar: {{t+|tt|тегермән|sc=Cyrl}}
 * Turkish: {{t+|tr|değirmen}}
 * Turkmen: {{t|tk|degirmen}}
-* Ukrainian: {{t|uk|млин|m|sc=Cyrl}}
+* Ukrainian: {{t|uk|млин|m}}
 * Uzbek: {{t|uz|tegirmon}}
 * Vietnamese: {{t+|vi|cối xay}}
 * Welsh: {{t|cy|melin|f}}
@@ -181,7 +179,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Russian: {{t+|ru|ме́льница|f}}
 * Scottish Gaelic: {{t|gd|muileann|m|f}}
 * Spanish: {{t+|es|molino|m}}
-* Swedish: {{t+|sv|kvarn|c}}, (''Scanian dialect'') {{t+|sv|mölla|c}}
+* Swedish: {{t+|sv|kvarn|c}}, {{qualifier|Scanian dialect}} {{t+|sv|mölla|c}}
 * Turkish: {{t+|tr|değirmen}}
 * Welsh: {{t|cy|melin|f}}
 {{trans-bottom}}
@@ -189,12 +187,12 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-top|manufacturing plant}}
 * Armenian: {{t|hy|գործարան}}
 * Czech: {{t+|cs|továrna|f}}
-* Dutch: {{t+|nl|fabriek|f}} {{qualifier|general}}, [[papierfabriek]] {{g|f}} {{qualifier|for paper}}, [[staalfabriek]] {{qualifier|for steel}}, [[textielfabriek]] {{qualifier|for textiles}}
+* Dutch: {{t+|nl|fabriek|f}} {{qualifier|general}}, {{t|nl|papierfabriek|f}} {{qualifier|for paper}}, {{t|nl|staalfabriek|f}} {{qualifier|for steel}}, {{t|nl|textielfabriek|f}} {{qualifier|for textiles}}
 * Estonian: {{t|et|tehas}}
 * Finnish: {{t+|fi|tehdas}}
 * French: {{t+|fr|manufacture|f}}, {{t+|fr|usine|f}}, {{t+|fr|fabrique|f}}
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
-* Greek: {{t+|el|εργοστάσιο|n|sc=Grek}}
+* Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
 * Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
 {{trans-mid}}
@@ -211,11 +209,11 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-bottom}}
 
 {{trans-top|building}}
-* Dutch: {{t+|nl|fabriek|f}} {{qualifier|general}}, [[papierfabriek]] {{g|f}} {{qualifier|for paper}}, [[staalfabriek]] {{qualifier|for steel}}, [[textielfabriek]] {{qualifier|for textiles}}
+* Dutch: {{t+|nl|fabriek|f}} {{qualifier|general}}, {{t|nl|papierfabriek|f}} {{qualifier|for paper}}, {{t|nl|staalfabriek|f}} {{qualifier|for steel}}, {{t|nl|textielfabriek|f}} {{qualifier|for textiles}}
 * Finnish: {{t+|fi|tehdas}}, {{t|fi|tehdasrakennus}}
 * French: {{t+|fr|manufacture|f}}
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}}, [[Papiermühle]] {{g|f}} {{qualifier|for paper}}
-* Greek: {{t+|el|εργοστάσιο|n|sc=Grek}}
+* Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
 {{trans-mid}}
 * Latvian: {{t|lv|maltuve}}
@@ -228,21 +226,22 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-bottom}}
 
 {{trans-top|establishment that handles a certain type of situation routinely}}
-* Dutch: [[papiermolen]] (~ burocracy)
+* Dutch: {{t-check|nl|papiermolen}}
 * Finnish: {{t+|fi|mylly}}
 {{trans-mid}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
-* Norwegian: {{t|no|papirmølle|m}}(~ burocracy)
+* Norwegian: {{t-check|no|papirmølle|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
 * Interlingua: {{t-check|ia|fabrica}}, {{t-check|ia|molino}}
+{{trans-mid}}
 * {{ttbc|csb}}: {{t|csb|młin|m}} (3)
 {{trans-bottom}}
 
 ===Etymology 2===
 {{wikipedia|Mill (currency)}}
-Ultimately from {{etyl|la|en}} {{term|millesimum|lang=la}}.
+Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 
 ====Noun====
 [[File:MillToken.jpeg|thumb|[[Missouri]] mill token.]]
@@ -268,26 +267,26 @@ Ultimately from {{etyl|la|en}} {{term|millesimum|lang=la}}.
 {{trans-bottom}}
 
 ===Etymology 3===
-From the noun ''mill''
+From the noun {{term|#Noun|mill}}.
 
 ====Verb====
 {{en-verb}}
 
-# {{context|transitive|lang=en}} To [[grind]] or otherwise process in a mill or other machine.
-#: ''to mill flour''
-# {{context|transitive|lang=en}} To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
-# {{context|transitive|lang=en}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
-# {{context|intransitive|lang=en}} (''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
-#: I didn't have much to do, so I just '''milled around''' the town looking at the shops.
-# {{context|zoology|of air-breathing creatures|lang=en}} To [[swim]] [[underwater]].
-# {{context|transitive|slang|lang=en}} To [[beat]]; to [[pound]].
+# {{label|en|transitive}} To [[grind]] or otherwise process in a mill or other machine.
+#: {{usex|to mill flour|lang=en}}
+# {{label|en|transitive}} To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
+# {{label|en|transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
+# {{label|en|intransitive|followed by|[[around]], [[about]], etc.}} To move about in an [[aimless]] fashion.
+#: {{usex|I didn't have much to do, so I just '''milled around''' the town looking at the shops.|lang=en}}
+# {{label|en|zoology|of air-breathing creatures}} To [[swim]] [[underwater]].
+# {{label|en|transitive|slang}} To [[beat]]; to [[pound]].
 #* Rudyard Kipling
-#*: Ortheris said nothing for a while. Then he unslung his belt, heavy with the badges of half a dozen regiments that his own had lain with, and handed it over to Mulvaney.<br>"I'm too little for to '''mill''' you, Mulvaney," said he, "an' you've strook me before; but you can take an' cut me in two with this 'ere if you like."
+#*: {{usex|Ortheris said nothing for a while. Then he unslung his belt, heavy with the badges of half a dozen regiments that his own had lain with, and handed it over to Mulvaney.<br>"I'm too little for to '''mill''' you, Mulvaney," said he, "an' you've strook me before; but you can take an' cut me in two with this 'ere if you like."|lang=en}}
 #: {{rfquotek|Thackeray}}
 # To pass through a fulling mill; to [[full]], as cloth.
 # To roll (steel, etc.) into bars.
 # To make (drinking chocolate) frothy, as by churning.
-# {{context|trading card games|lang=en}} To place cards into the discard pile directly from the draw pile.
+# {{label|en|trading card games}} To place cards into the discard pile directly from the draw pile.
 
 =====Synonyms=====
 * {{sense|move about in an aimless fashion}} [[roam]], [[wander]]
@@ -354,7 +353,7 @@ From the noun ''mill''
 ==Albanian==
 
 ===Etymology===
-From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*mis-lo}} (regular sl > Alb. /ll/), from {{etyl|ine-pro|sq}} {{m|ine-pro|*mois}} 'sheep, hide; leatherwork'. Compare Old High German {{term|meisa||baggage|lang=goh}}.
+From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*mis-lo}} (regular sl > Alb. /ll/), from {{etyl|ine-pro|sq}} {{m|ine-pro|*mois}} 'sheep, hide; leatherwork'. Compare Old High German {{m|goh|meisa||baggage}}.
 
 ===Noun===
 {{sq-noun|m|mije|milli|mijet}}
@@ -364,14 +363,12 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*mis-lo}} (regular sl > Alb. /ll/), from {{
 =====Related terms=====
 * {{l|sq|meshin}}
 
-[[Category:Albanian nouns]]
-
 ----
 
 ==Catalan==
 
 ===Etymology===
-From {{etyl|la|ca}} {{term|milium|lang=la}}.
+From {{etyl|la|ca}} {{m|la|milium}}.
 
 ===Noun===
 {{ca-noun|m}}
@@ -382,13 +379,16 @@ From {{etyl|la|ca}} {{term|milium|lang=la}}.
 
 ==Irish==
 
+===Etymology===
+{{rfe|lang=ga}}
+
 ===Pronunciation===
-* {{IPA|lang=ga|[mʲiːlʲ]}} or {{IPAchar|[mʲɪlʲ]}}
+* {{IPA|[mʲiːlʲ]|[mʲɪlʲ]|lang=ga}}
 
 ===Verb===
 {{ga-verb|pres=milleann|fut=millfidh|vn=milleadh|pp=millte}}
 
-# To [[spoil]]
+# [[spoil]]
 
 ====Conjugation====
 {{ga-conj-1a|m|il|l|slender}}
@@ -401,14 +401,14 @@ From {{etyl|la|ca}} {{term|milium|lang=la}}.
 ==Manx==
 
 ===Etymology===
-From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
+From {{etyl|sga|gv}} {{m|sga|mil}}.
 
 ===Noun===
 {{gv-noun|m|millyn|molley}}
 
 # [[honey]]
 
-====Mutation====
+===Mutation===
 {{gv mut cons|m|ill}}
 
 ----
@@ -418,12 +418,17 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 ===Pronunciation===
 * {{IPA|/miːʎ/|lang=gd}}
 
-===Verb===
-{{head|gd|verb|verbal noun|milleadh}}
+===Etymology 1===
+{{rfe|lang=gd}}
+
+====Verb====
+{{gd-verb|past=mhill|fut=millidh|vn=milleadh|pp=millte}}
 
 # [[destroy]], [[spoil]], [[ruin]]
 
-===Noun===
+===Etymology 2===
+
+====Noun====
 {{head|gd|noun form|g=m}}
 
 # {{genitive of|meall|lang=gd}}
@@ -439,7 +444,7 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 ===Noun===
 {{head|wrh|noun}}
 
-# {{context|anatomy|lang=wrh}} [[eye]]
+# {{label|wrh|anatomy}} [[eye]]
 
 [[ca:mill]]
 [[da:mill]]
