# {{cx|comptheory|lang=en}} A large [[element]] at the beginning of a [[list]] of items to be [[bubble sort]]ed, and thus tending to be quickly swapped into its correct position. Compare {{term|turtle|lang=en}}. <rabbit#30167346>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -22,6 +22,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 # The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
 # A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
 # {{context|cricket|lang=en}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
+# {{cx|comptheory|lang=en}} A large [[element]] at the beginning of a [[list]] of items to be [[bubble sort]]ed, and thus tending to be quickly swapped into its correct position. Compare {{term|turtle|lang=en}}.
 
 =====Synonyms=====
 {{sense|animal}}
