/* Noun */ Author corrected <staff#30167385>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -31,7 +31,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 #: {{ux|en|a constable's '''staff'''}}
 #* {{w|William Shakespeare}} (1564-1616)
 #*: Methought this '''staff''', mine office badge in court, / Was broke in twain.
-#* {{w|Abraham Hayward}} (1801-1884)
+#*Sir {{w|John Hayward (historian)|John Hayward}} (c.1564-1627)
 #*: All his officers brake their '''staves'''; but at their return new '''staves''' were delivered unto them.
 # A pole upon which a [[flag]] is supported and displayed.
 # {{label|en|archaic}} The [[rung]] of a [[ladder]].
