/* Verb */ Tidy <embay#30168103>

--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -6,12 +6,11 @@ From {{prefix|en|alt1=em|bay|gloss2=bathe|lang=en}}.
 ====Verb====
 {{en-verb|embay}}
 
-# {{context|transitive|obsolete|lang=en}} To [[bathe]]; to [[steep]].
+#{{label|en|transitive|obsolete}} To [[bathe]]; to [[steep]].
 #*'''1590''', {{w|Edmund Spenser}}, ''The Faerie Queene'', III.11:
-#*:Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well […].
-#* '''1600''', {{w|Edward Fairfax}}, The ''Jerusalem Delivered'' of Tasso, XII, lxii:
-#*: ''Their swords both points and edges sharp '''embay'''''
-#*:: ''In purple blood whereso they hit or light.''
+#*:Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well{{nb...}}.
+#*'''1600''', {{w|Edward Fairfax}}, The ''Jerusalem Delivered'' of Tasso, XII, lxii:
+#*:Their swords both points and edges sharp '''embay''' / In purple blood whereso they hit or light.
 
 ===Etymology 2===
 From {{prefix|en|alt1=em|bay|lang=en}}.
