--- a/en/f/frontal sinus.803576.wikitext
+++ b/en/f/frontal sinus.803576.wikitext
@@ -8,8 +8,9 @@
 ====Translations====
 {{trans-top|sinus}}
 * Czech: {{t|cs|čelní dutina|f}}
-{{trans-mid}}
 * Finnish: {{t|fi|otsaontelo}}
+{{trans-mid}}
+* Russian: {{t|ru|лобная пазуха|f|sc=Cyrl}}
 {{trans-bottom}}
 
 [[ca:frontal sinus]]
