--- a/en/r/recommencement.741536.wikitext
+++ b/en/r/recommencement.741536.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+From  {{etyl|frm|en}} {{term|recommencement|lang=frm}}, from {{etyl|fro|en}}
 ===Noun===
 {{en-noun}}
 # The act of [[recommence|recommencing]]; a second or subsequent [[commencement]].
