--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 * German: {{t+|de|Gauner|m}}, {{t+|de|Ganove|m}}
 {{trans-mid}}
 * Icelandic: {{t+|is|glæpamaður|m}}, {{t|is|þorpari|m}}
-* Indonesian: {{t+|id|maling}}
+* Indonesian: {{t+|id|maling}}, {{t+|id|bajingan}}
 * Italian: {{t+|it|furfante|m}}, {{t+|it|ladro|m}}, {{t|it|truffatore|m}}
 * Norwegian Bokmål: {{t|nb|skurk|m}}
 * Portuguese: {{t+|pt|ladrão|m}}, {{t+|pt|ladra|f}}
