--- a/en/b/beef to the hoof.741306.wikitext
+++ b/en/b/beef to the hoof.741306.wikitext
@@ -4,8 +4,6 @@
 * [[beef to the hock]]
 
 ===Adjective===
-'''[[beef]] [[to]] [[the]] [[hoof]]'''
+{{en-adj|-}}
 
 # {{context|Ireland|idiomatic|said of a woman|lang=en}} [[fat]], [[chubby]], particularly with fat legs.
-
-[[Category:English adjectives]]
