/* Pronunciation */ transcribed the recordings <seize#30429761>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -120,7 +120,9 @@ From {{etyl|la|fr}} {{term|sēdecim|lang=la}}.
 
 ===Pronunciation===
 * {{audio|Fr-seize.ogg|audio (France)|lang=fr}}
+** {{IPA|/sɛz/|lang=fr}}
 * {{audio|Qc-seize.ogg|audio (Quebec)|lang=fr}}
+** {{IPA|/saiz/|lang=fr}}
 
 ===Numeral===
 {{head|fr|numeral}}
