--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -173,7 +173,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * [[lethera#English|lethera]]
 * [[Tar Heel#English|Tar Heel]]
 
-[[Category:en:Fabrics]]
+[[Category:en:Hides]]
 
 [[ar:leather]]
 [[cs:leather]]
