--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -14,7 +14,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Russian: {{t|ru|культ личности|m|sc=Cyrl}}
+* Russian: {{t|ru|культ ли́чности|m|sc=Cyrl}}
 {{trans-bottom}}
 
 ====See also====
