/* Noun */ # {{cx|sound recording|lang=en}} The situation where sound is picked up by a [[microphone]] from a source other than that which is intended. <bleed#30465267>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -156,6 +156,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 
 # An incident of bleeding, as in [[haemophilia]].
 # {{cx|printing|lang=en}} A narrow edge around a page layout, to be printed but cut off afterwards (added to allow for slight misalignment, especially with pictures that should run to the edge of the finished sheet).
+# {{cx|sound recording|lang=en}} The situation where sound is picked up by a [[microphone]] from a source other than that which is intended.
 
 ====Translations====
 {{trans-top|incident of bleeding}}
