--- a/en/t/TCR.802629.wikitext
+++ b/en/t/TCR.802629.wikitext
@@ -3,7 +3,8 @@
 ===Noun===
 {{en-noun}}
 
-# A TCR (Technical [[certification|Certification]] Requirement) is a test case that must pass before software can be certified as compliant to a given standard.
+# {{cx|software engineering|lang=en}} [[technical]] [[certification]] [[requirement]]: a test case that must pass before software can be certified as compliant to a given standard.
+# {{cx|UK|utilities|lang=en}} [[tariff]] [[comparison]] [[rate]]
 
 ===Anagrams===
 * [[CRT#English|CRT]] 
