--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -188,6 +188,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Ukrainian: {{t|uk|дути|tr=dúty|sc=Cyrl}}, {{t|uk|віяти|tr=víjaty|sc=Cyrl}}
 * Venetian: {{t|vec|supiar}}, {{t|vec|sufiar}}
 * Vietnamese: {{t+|vi|thổi}}, {{t+|vi|phù}}, {{qualifier|to blow on food}} {{t+|vi|phù phù}}
+* Welsh: {{t+|cy|chwythu}}
 {{trans-bottom}}
 
 {{trans-top|to propel by an air current}} <!--2-->
