--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -9,7 +9,7 @@
 # A situation where a leader (often a [[dictator]]) has been falsely idolized and made into a national or group icon and is revered as a result.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|a situation where a leader (often a dictator) has been falsely idolized}}
 * Arabic: {{t-needed|ar}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
