/* Translations */ pt checked <gamble#30622087>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -31,6 +31,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * Macedonian: {{t|mk|коцка|f|tr=kócka}}, {{t|mk|комар|m|tr=kómar}}
 * Polish: {{t+|pl|hazard|m}}
+* Portuguese: {{t|pt|aposta|f}}
 * Russian: {{t+|ru|азартная игра|f|tr=azártnaja igrá|sc=Cyrl}}, {{t+|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -40,13 +41,13 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
 * Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
+* Portuguese: {{t|pt|aposta|f}}
 * Russian: {{t+|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
 {{trans-bottom}}
 
 {{checktrans-top}}
 * Interlingua: {{t-check|ia|joco}}
 {{trans-mid}}
-* Portuguese: {{t-check|pt|jogo|m}}
 {{trans-bottom}}
 
 ===Verb===
