--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -95,6 +95,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Macedonian: {{t|mk|се коцка|tr=se kócka}}
 * Malay: {{t|ms|judi}}
 * Maori: {{t|mi|purei moni}}
+* Portuguese: {{t+|pt|apostar}}
 * Russian: {{t|ru|играть в азартные игры|tr=igrát' v azártnyje ígry|sc=Cyrl}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
 * Spanish: {{t+|es|apostar}}, {{t+|es|jugar}}
