--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -228,6 +228,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 
 ====Translations====
 {{trans-top|the @ symbol}}
+* Armenian: {{t|hy|շնիկ|sc=Armn}}
 * Georgian: {{t|ka|ძაღლუკა}}
 {{trans-mid}}
 * Italian: {{t+|it|chiocciola|f}}
