t+it:[[viaggio inaugurale]] ([[WT:EDIT|Assisted]]) <maiden voyage#30705426>

--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -15,6 +15,7 @@ See {{term|maiden|lang=en}}, adjective.
 * Finnish: {{t+|fi|neitsytmatka}}
 {{trans-mid}}
 * German: {{t+|de|Jungfernfahrt|f}}
+* Italian: {{t|it|viaggio inaugurale}}
 * Spanish: {{t|es|viaje inaugural|m}}
 {{trans-bottom}}
 
