--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -15,7 +15,7 @@ See {{term|maiden|lang=en}}, adjective.
 * Finnish: {{t+|fi|neitsytmatka}}
 {{trans-mid}}
 * German: {{t+|de|Jungfernfahrt|f}}
-* Italian: {{t|it|viaggio inaugurale}}
+* Italian: {{t|it|viaggio inaugurale|m}}
 * Spanish: {{t|es|viaje inaugural|m}}
 {{trans-bottom}}
 
