--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -10,20 +10,29 @@
 
 ====Translations====
 {{trans-top|situation of being falsely idolized}}
+* Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|عِبَادَة شَخْصِيَّة|f|tr=ʿibāda šaḵṣiyya|sc=Arab}}
+* Armenian: {{t-needed|hy}}
 * Belarusian: {{t|be|культ асо́бы|m|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|個人崇拜|sc=Hani}}, {{t+|cmn|个人崇拜|tr=gèrén chóngbài|sc=Hani}}
 * Estonian: {{t|et|isikukultus}}
 * Finnish: {{t|fi|henkilökultti}}
 * French: {{t|fr|culte de la personnalité|m}}
-{{trans-mid}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|Personenkult|m}}
+{{trans-mid}}
+* Hebrew: {{t-needed|he}}
 * Japanese: {{t|ja|個人崇拝|tr=こじんすうはい, kojin sūhai|sc=Jpan}}
 * Korean: {{t|ko|개인숭배|sc=Kore}}
+* Latvian: {{t-needed|lv}}
+* Lithuanian: {{t-needed|lt}}
+* Polish: {{t-needed|pl}}
 * Romanian: {{t-needed|ro}}
 * Russian: {{t|ru|культ ли́чности|m|sc=Cyrl}}
+* Serbo-Croatian: {{t-needed|sh}}
 * Spanish: {{t|es|culto a la personalidad|m}}
+* Turkish: {{t-needed|tr}}
 * Ukrainian: {{t|uk|культ осо́би|m|sc=Cyrl}}
 {{trans-bottom}}
 
