t+gu:[[ખિસકોલી]] ([[WT:EDIT|Assisted]]) <squirrel#30899204>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -62,6 +62,7 @@ From {{etyl|fro|en}} {{m|fro|esquirel}}, {{m|fro|escurel}} (whence {{etyl|fr|-}}
 * German: {{t+|de|Eichhörnchen|n}}, {{t+|de|Hörnchen|n}}
 * Greek: {{t+|el|σκίουρος|m}}
 * Guaraní: {{t|gn|koati}}
+* Gujarati: {{t|gu|ખિસકોલી|tr=khiskholī|sc=Gujr}}
 * Hebrew: {{t+|he|סנאי|m|tr=sna'í}}
 * Hindi: {{t|hi|गिलहरी|f|tr=gilahrī|sc=Deva}}
 * Hopi: {{t|hop|sakuna}}
