--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -46,7 +46,7 @@
 * Hungarian: {{t+|hu|vadászgörény}}
 * Irish: {{t|ga|firéad|m}}
 * Italian: {{t+|it|furetto|m}}
-* Japanese: {{t|ja|フェレット|tr=feretto|sc=Jpan}}
+* Japanese: {{t|ja|フェレット|tr=feretto|sc=Jpan}}, {{t|ja|白鼬|tr=しろいたち, shiroitachi}}
 * Jèrriais: {{t|roa-jer|futhet|m}}
 * Korean: {{t|ko|페레트|sc=Kore}}
 * Latvian: {{t|lv|okšķeris}}, {{t|lv|sesks|m}}
