/* Translations */ Japanese <weasel#31097185>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -53,7 +53,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Hungarian: {{t+|hu|menyét}}
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
-* Japanese: {{t+|ja|イタチ|tr=itachi|sc=Jpan}}, {{t|ja|鼬鼠|tr=いたち, itachi|sc=Jpan}}, {{t|ja|飯綱|tr=いいずな, īzuna}}
+* Japanese: {{t+|ja|イタチ|tr=itachi|sc=Jpan}}, {{t|ja|鼬|tr=いたち, itachi|sc=Jpan}}, {{t|ja|鼬鼠|tr=いたち, itachi|sc=Jpan}}, {{t|ja|飯綱|tr=いいずな, īzuna}}
 * Korean: {{t|ko|족제비|sc=Hang}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|luoseica}}
