--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -53,9 +53,10 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Hindi: {{t|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
-{{trans-mid}}
 * Italian: {{t+|it|bambù|m}}
+{{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
+* Jèrriais: {{t|roa-jer|bambou|m}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
 * Khmer: {{t+|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
 * Korean: {{t+|ko|대나무|sc=Kore}}
@@ -101,6 +102,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Italian: {{t+|it|bambù|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
+* Jèrriais: {{t|roa-jer|bambou|m}}
 * Macedonian: {{t|mk|бамбус|m|tr=bámbus}}
 * Malay:
 *: Rumi: {{t+|ms|buluh}}, {{t+|ms|bambu}}, {{t|ms|aur}}
