--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -87,7 +87,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 {{trans-bottom}}
 
 ===Etymology 4===
-{{etyl|ang|en}} {{term|lang=ang|cop}}, {{term|copp}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, basin, round object}}, from  {{etyl|ine-pro|en}} {{m|ine-pro|*gu-||}}.  Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
+{{etyl|ang|en}} {{term|cop|lang=ang}}, {{term|copp|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, basin, round object}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gu-}}. Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
 
 ====Noun====
 {{en-noun}}
