--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -14,9 +14,8 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 {{en-adj|er}}
 
 #[[uncomplicated|Uncomplicated]]; taken by itself, with nothing added.
-#*{{quote-book|year=1910|author={{w|Emerson Hough}}
-|title=[http://www.gutenberg.org/ebooks/11593 The Purchase Price]|chapter=1
-|passage=“[…] We are engaged in a great work, a treatise on our river fortifications, perhaps? But since when did army officers afford the luxury of amanuenses in this '''simple''' republic?{{nb...}}”}}
+#*{{RQ:EHough PrqsPrc|I|0088}}
+#*:“[…] We are engaged in a great work, a treatise on our river fortifications, perhaps? But since when did army officers afford the luxury of amanuenses in this '''simple''' republic?{{nb...}}”
 #*'''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
 #*:There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
 #Without [[ornamentation]]; [[plain]].
