--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -187,7 +187,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Russian: {{t+|ru|блин|m|tr=blin}}, {{t+|ru|гиря|f|tr=gírja}} ''dumbbell'', {{t+|ru|гантель|f|tr=gantɛ́l’}} ''barbell''
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
-* Swedish: {{t+|sv|vikt|c}}
+* Swedish: {{t+|sv|vikt|c}}, {{t+|sv|tyngd|c}}
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
 
