t+sv:[[vikt]] t-balance ([[WT:EDIT|Assisted]]) <weight#31258045>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -236,6 +236,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-bottom}}
 
 {{trans-top|typography: boldness of a font}}
+* Swedish: {{t+|sv|vikt|c}}
 {{trans-mid}}
 {{trans-bottom}}
 
