--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -303,6 +303,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-top|to bias, to slant}}
 * Finnish: {{t|fi|painottaa}}
 {{trans-mid}}
+* Swedish: {{t+|sv|vinkla}}
 {{trans-bottom}}
 
 {{trans-top|to handicap a horse}}
