--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -54,6 +54,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Arabic: {{t|ar|إيذان|m|tr='idhaan}}, {{t|ar|إعلان|m|tr='i3laan}}
 * Armenian: {{t+|hy|գովազդ|tr=govazd}}
 * Asturian: {{t|ast|anunciu|m}}
+* Belarusian: {{t|be|рэкла́ма|f|sc=Cyrl}}, {{t|be|аб'я́ва|f|sc=Cyrl}}
 * Breton: {{t+|br|bruderezh|m}}
 * Bulgarian: {{t+|bg|реклама|f}}
 * Catalan: {{t|ca|anunci|m}}
@@ -80,8 +81,8 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Korean: {{t+|ko|광고|sc=Hang}} ({{t+|ko|廣告|sc=Hani}})
 * Kyrgyz: {{t+|ky|жарнама}}
 * Latin: {{t|la|prescriptio|f}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|reklama}}
+{{trans-mid}}
 * Macedonian: {{t|mk|реклама|f|tr=rekláma}}
 * Malay: {{t|ms|iklan}}
 * Maltese: {{t|mt|riklam}}, {{t|mt|pubbliċità}}, {{t|mt|tgħarif kummerċjali}}
@@ -105,6 +106,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Telugu: {{t|te|వ్యాపార ప్రకటన}}
 * Thai: {{t|th|การโฆษณา|tr=gaan kôhtsànaa|sc=Thai}}
 * Turkish: {{t+|tr|reklam}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
+* Ukrainian: {{t+|uk|рекла́ма|f|sc=Cyrl}}, {{t+|uk|оголо́шення|n|sc=Cyrl}}, {{t+|uk|ано́нс|m|sc=Cyrl}}, {{t|uk|зая́ва|f|sc=Cyrl}}
 * Vietnamese: {{t+|vi|quảng cáo}} ({{t|vi|廣告|sc=Hani}}), {{t+|vi|giới thiệu}}
 * Volapük: {{t+|vo|noted}}, {{t+|vo|reklam}}, {{t+|vo|nunam}}
 * West Frisian: {{t|fy|advertinsje}}, {{t|fy|oankundiging}}
@@ -112,6 +114,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 {{trans-bottom}}
 
 {{trans-top|public notice}}
+* Belarusian: {{t|be|аб'я́ва|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|обявление}}, {{t+|bg|обява}}
 * Finnish: {{t+|fi|ilmoitus}}
 * French: {{t+|fr|avis|m}}, {{t+|fr|annonce|f}}
@@ -128,6 +131,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Portuguese: {{t|pt|edital|m}}
 * Romanian: {{t+|ro|anunț|n}} (public)
 * Russian: {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t+|ru|анонс|m|tr=anóns}}, {{t+|ru|извещение|n|tr=izveščénije}}
+* Ukrainian: {{t+|uk|оголо́шення|n|sc=Cyrl}}
 {{trans-bottom}}
 
 {{checktrans-top}}
