--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -87,6 +87,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Baekje: {{t|pkc|斯麻|tr=sama}}
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
+* Bats: {{t|bbl|გუბ}}
 * Belarusian: {{t|be|во́страў|m}}, {{qualifier|small}} {{t|be|вы́спа|f}}
 * Bengali: {{t|bn|দ্বীপ|tr=dip|sc=Beng}}
 * Bislama: {{t|bi|aelan}}
