--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -35,6 +35,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 * Portuguese: {{t|pt|esfregar sal na ferida}}
 * Romanian: {{t|ro|a pune sare pe rană}}
 * Russian: {{t|ru|сыпать соль на рану|tr=sýpat' sol' na ránu|sc=Cyrl}}
+* Spanish: {{t|es|Frotar sal en la herida}}
 * Swedish: {{t|sv|strö salt i såren}}
 {{trans-bottom}}
 
