--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -12,7 +12,7 @@
 {{trans-top|situation of being falsely idolized}}
 * Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|عِبَادَة شَخْصِيَّة|f|tr=ʿibāda šaḵṣiyya|sc=Arab}}
-* Armenian: {{t-needed|hy}}
+* Armenian: {{t|hy|անձի պաշտամունք|sc=Armn}}
 * Belarusian: {{t|be|культ асо́бы|m|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|個人崇拜|sc=Hani}}, {{t+|cmn|个人崇拜|tr=gèrén chóngbài|sc=Hani}}
