--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -15,6 +15,8 @@
 
 # {{cx|fandom slang|lang=en}} The [[romantic]] [[pairing]] of the characters Jayne Cobb and River Tam from the television series ''Firefly''.
 
+[[Category:en:Ships (fandom)]]
+
 ===Anagrams===
 * [[aryne#English|aryne]]
 * [[Yaren#English|Yaren]]
