--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -13,7 +13,7 @@
 ====Proper noun====
 {{en-proper noun}}
 
-# {{cx|fandom slang|lang=en}} The [[romantic]] [[pairing]] of the characters Jayne Cobb and River Tam from the television series ''Firefly''.
+# {{cx|fandom slang|lang=en}} The [[romantic]] [[pairing]] of the characters {{w|River Tam}} and {{w|Jayne Cobb}} from the television series ''Firefly''.
 
 [[Category:en:Ships (fandom)]]
 
