--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -238,7 +238,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 {{trans-mid}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
-* Japanese: {{t+|ja|バブル|tr=baburu}}
+* Japanese: {{t+|ja|バブル|tr=baburu}}, {{t|ja|水膨れ|tr=みずぶくれ, mizubukure}}
 * Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
 * Spanish: {{t+|es|burbuja|f}}
 * Swedish: {{t+|sv|bubbla|c}}
