/* Translations */ Sanskrit बुद्बुद <bubble#31599496>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -164,6 +164,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Romanian: {{t+|ro|balon|n}}, {{t+|ro|bășică|f}}, {{t+|ro|bulă|f}}
 * Romansch: {{t|rm|vaschia|f}}, {{t|rm|scufla|f}}
 * Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
+* Sanskrit: {{t|sa|बुद्बुद|m}}
 * Sardinian: {{t|sc|bùlla|f}}
 * Scots: {{t|sco|blab}}
 * Scottish Gaelic: {{t|gd|builgean|f}}
