/* Hungarian */ +1 derived term; hu-IPA <CD#31602035>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -144,7 +144,7 @@ From {{etyl|en|de}} {{term|CD|lang=en}}.
 From {{etyl|en|hu}} {{term|CD|lang=en}}.
 
 ===Pronunciation===
-* {{IPA|/ˈt͡seːdeː/|lang=hu}}
+* {{hu-IPA|cédé}}
 * {{audio|Hu-cédé.ogg|Audio|lang=hu}}
 
 ===Noun===
@@ -157,6 +157,9 @@ From {{etyl|en|hu}} {{term|CD|lang=en}}.
 
 ====Synonyms====
 * [[cédé]]
+
+====Derived terms====
+* [[CD-lejátszó]]
 
 ----
 
