--- a/en/h/hi there.742282.wikitext
+++ b/en/h/hi there.742282.wikitext
@@ -3,6 +3,6 @@
 ===Interjection===
 {{en-interj}}
 
-# An informal [[greeting]]. Also if you greet someone with hi there it generally means that they are not a superior. also it is in correlation with u wot m8, another informal greeting, which also correlates with hi, hello, hiya, howdyado, howdidoodi, and more.
+# An informal [[greeting]].
 
 [[Category:en:Greetings]]
