--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -228,7 +228,9 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 
 # the [[@]] symbol.
 
-====Translations==== {{trans-top|the @ symbol}} * Armenian: {{t|hy|շնիկ|sc=Armn}} * Georgian: {{t|ka|ძაღლუკა}} {{trans-mid}} * Italian: {{t+|it|chiocciola|f}} * Polish: {{t+|pl|małpa|f}} * Russian: {{t|ru|собачка}}, {{t|ru|собака}} {{trans-bottom}}
+====Translations==== 
+{{trans-top|the @ symbol}} * Armenian: {{t|hy|շնիկ|sc=Armn}} * Georgian: {{t|ka|ძაღლუკა}} {{trans-mid}} * Italian: {{t+|it|chiocciola|f}} * Polish: {{t+|pl|małpa|f}} * Russian: {{t|ru|собачка}}, {{t|ru|собака}} 
+{{trans-bottom}}
 
 ===Statistics===
 * {{rank|you|not|be|20|at|by|on|her}}
