--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -13,7 +13,7 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 
 #A [[bend]]; [[turn]]; [[curve]]; [[curvature]]; a [[flexure]].
 #:{{ux|en|She held the baby in the '''crook''' of her arm.}}
-#*Phaer
+#*{{w|Thomas Phaer}} (c.1510-1560)
 #*:through lanes, and '''crooks''', and darkness
 #A bending of the knee; a [[genuflection]].
 #A [[bent]] or curved part; a curving piece or portion (of anything).
@@ -30,13 +30,13 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 #*:Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 #A bishop's staff of office.
 #An [[artifice]]; a [[trick]]; a [[contrivance]].
-#*Cranmer
+#*{{w|Thomas Cranmer}} (1489-1556)
 #*:for all your brags, hooks, and '''crooks'''
 #A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
 #*'''1973''' November 17, {{w|Richard Nixon}}, reported 1973 November 18, ''The Washington Post'', [http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm ''Nixon Tells Editors, ‘I'm Not a Crook’''],
 #*:"People have got to know whether or not their President is a '''crook'''. Well, I′m not a '''crook'''. I′ve earned everything I′ve got."
 #A [[pothook]].
-#* Sir Walter Scott
+#*Sir {{w|Walter Scott}} (1771-1832)
 #*:as black as the '''crook'''
 #{{lb|en|music}} A small tube, usually curved, applied to a trumpet, horn, etc., to change its pitch or key.
 
