/* Noun */ RFV: # {{rfv-sense}} {{context|UK|lang=en}} a [[pigeon]]. <pig#31639736>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -448,7 +448,7 @@ Shortening of {{m|en|pigeon}}
 ====Noun====
 {{en-noun}}
 
-# {{context|UK|lang=en}} a [[pigeon]].
+# {{rfv-sense}} {{context|UK|lang=en}} a [[pigeon]].
 
 ===References===
 <references />
