--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -445,6 +445,9 @@ Origin unknown. See {{m|en|piggin}}.
 ===Etymology 3===
 Shortening of {{m|en|pigeon}}
 
+===Pronunication===
+{{rfp}}
+
 ====Noun====
 {{en-noun}}
 
