--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -16,7 +16,7 @@ From {{etyl|enm|en}} {{term|coppe|lang=enm}}, from {{etyl|ang|en}} *{{term||copp
 # {{context|obsolete|lang=en}} A [[spider]].
 
 ===Etymology 2===
-Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|la|en}} {{term|capio|capere|lang=la|to seize, to grasp}}; or possibly from {{etyl|nl|en}} {{term|kapen||to steal|lang=nl}}, from {{etyl|fy|en}} {{term|kapia|kāpia|to take away|lang=fy}}, from {{etyl|ofs|en}} {{term|kapia|lang=ofs}}, to buy.
+Possibly from {{etyl|frm|en}} {{term|caper||to capture|lang=frm}}, from {{etyl|la|en}} {{term|capio|capere|lang=la|to seize, to grasp}}; or possibly from {{etyl|nl|en}} {{term|kapen||to steal|lang=nl}}, from {{etyl|fy|en}} {{term|kapia|kāpia|to take away|lang=fy}}, from {{etyl|ofs|en}} {{term|kapia|lang=ofs}}, to buy.
 
 ====Verb====
 {{en-verb|copp}}
