t+ur:[[چمڑا]] t-balance t+et:[[nahk]] t+uk:[[шкіра]] t+be:[[скура]] t+bg:[[кожа]] t+mk:[[кожа]] t+lo:[[ຫນັງ]] t+lo:[[ໜັງສັດ]] t+my:[[သားရေ]] t+bn:[[চামড়া]] t+uz:[[charm]] t+kk:[[тері]... <leather#31658231>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -34,7 +34,12 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Armenian: {{t|hy|կաշի}}
 * Asturian: {{t|ast|cueru|m}}
 * Avestan: {{t|ae|tr=carəman-}}
+* Azeri: {{t+|az|dəri}}
 * Bashkir: {{t|ba|күн|sc=Cyrl}}
+* Belarusian: {{t|be|ску́ра|f|sc=Cyrl}}
+* Bengali: {{t|bn|চামড়া|tr=camŗa|sc=Beng}}
+* Bulgarian: {{t+|bg|ко́жа|f|sc=Cyrl}}
+* Burmese: {{t+|my|သားရေ|sc=Mymr}}
 * Catalan: {{t|ca|cuir|m}}
 * Chamicuro: {{t|ccc|shama}}
 * Chinese:
@@ -43,6 +48,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Danish: {{t+|da|læder|n}}
 * Dutch: {{t+|nl|leer|n}}, {{t+|nl|leder|n}} {{qualifier|formal}}
 * Esperanto: {{t|eo|ledo}}
+* Estonian: {{t+|et|nahk}}
 * Faroese: {{t|fo|leður|n}}
 * Finnish: {{t+|fi|nahka}}
 * French: {{t+|fr|cuir|m}}
@@ -60,12 +66,16 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Indonesian: {{t+|id|kulit}}
 * Irish: {{t|ga|leathar|m}}
 * Italian: {{t+|it|cuoio|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|皮|tr=かわ, kawa}}
+* Kazakh: {{t+|kk|тері|sc=Cyrl}}
+{{trans-mid}}
+* Khmer: {{t|km|көн|sc=Khmr}}
 * Korean: {{t+|ko|가죽}}
+* Lao: {{t|lo|ຫນັງ|sc=Laoo}}, {{t+|lo|ໜັງສັດ|sc=Laoo}}
 * Latin: {{t|la|cutis|f}}
 * Latvian: {{t+|lv|āda|f}}
 * Lithuanian: {{t+|lt|oda|f}}
+* Macedonian: {{t|mk|ко́жа|f|sc=Cyrl}}
 * Malayalam: {{t|ml|തോല്‍}}
 * Mongolian: {{t|mn|савхи|sc=Cyrl}}
 * Navajo: {{t|nv|akał}}
@@ -88,6 +98,9 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Swedish: {{t+|sv|läder|n}}
 * Thai: {{t|th|หนัง|tr=năng}}
 * Turkish: {{t+|tr|deri}}
+* Ukrainian: {{t|uk|шкі́ра|f|sc=Cyrl}}
+* Urdu: {{t|ur|چمڑا|f|tr=camṛā|sc=ur-Arab}}
+* Uzbek: {{t+|uz|charm}}
 * Venetian: {{t+|vec|curame|m}}, {{t+|vec|curam|m}}, {{t|vec|corame|m}}
 * Vietnamese: {{t+|vi|da thuộc}}
 * Walloon: {{t+|wa|cur|m}}
