--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -59,7 +59,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 *: Ancient Greek: {{t|grc|βύρσα|f|sc=polytonic}}
 * Guaraní: {{t|gn|pire}}
 * Hebrew: {{t+|he|עוֹר|tr=iver|sc=Hebr}}
-* Hindi: {{t|hi|चमड़ा|tr=camṛā|sc=Deva}}
+* Hindi: {{t|hi|चमड़ा|f|tr=camṛā|sc=Deva}}
 * Hungarian: {{t+|hu|bőr}}
 * Icelandic: {{t+|is|leður|n}}
 * Ido: {{t+|io|ledro}}
@@ -67,9 +67,8 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Irish: {{t|ga|leathar|m}}
 * Italian: {{t+|it|cuoio|m}}
 * Japanese: {{t+|ja|皮|tr=かわ, kawa}}
-* Kazakh: {{t+|kk|тері|sc=Cyrl}}
+* Kazakh: {{t+|kk|тері|sc=Cyrl}}, {{t|kk|көн|sc=Cyrl}}
 {{trans-mid}}
-* Khmer: {{t|km|көн|sc=Khmr}}
 * Korean: {{t+|ko|가죽}}
 * Lao: {{t|lo|ຫນັງ|sc=Laoo}}, {{t+|lo|ໜັງສັດ|sc=Laoo}}
 * Latin: {{t|la|cutis|f}}
