--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -79,6 +79,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Latvian: {{t+|lv|āda|f}}
 * Lithuanian: {{t+|lt|oda|f}}
 * Macedonian: {{t|mk|ко́жа|f|sc=Cyrl}}
+* Malay: {{t|ms|kulit}}
 * Malayalam: {{t|ml|തോല്‍}}
 * Maltese: {{t|mt|ġilda|f}}
 * Mongolian: {{t|mn|савхи|sc=Cyrl}}, {{t+|mn|арьс|sc=Cyrl}}
