--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -445,7 +445,7 @@ Origin unknown. See {{m|en|piggin}}.
 ===Etymology 3===
 Shortening of {{m|en|pigeon}}
 
-===Pronunication===
+====Pronunication====
 {{rfp}}
 
 ====Noun====
