--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -70,7 +70,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Japanese: {{t+|ja|皮|tr=かわ, kawa}}
 * Karachay-Balkar: {{t|krc|тери|sc=Cyrl}}
 * Kazakh: {{t+|kk|тері|sc=Cyrl}}, {{t|kk|көн|sc=Cyrl}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ស្បែក|tr= sbaek|sc=Khmr}}
 * Korean: {{t+|ko|가죽}}
 {{trans-mid}}
 * Kyrgyz: {{t|ky|тери|sc=Cyrl}}
