--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -131,8 +131,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Interlingua: {{t|ia|cosa}}
 * Irish: {{t|ga|rud|m}}, {{t|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
-* Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
 * Kazakh: {{t|kk|нәрсе|tr=närsä|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}
 * Korean: {{t+|ko|물건|sc=Kore}}
@@ -149,7 +149,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Old Church Slavonic: {{t|cu|вєшть|f|tr=veštĭ|sc=Cyrs}}
 * Old English: {{t|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
-* Polish: {{t+|pl|rzecz|f}}, {{t+|pl|przedmiot|m}}
+* Polish: {{t+|pl|rzecz|f}}, {{t+|pl|przedmiot|m}}, {{t+|pl|coś|n}}
 * Portuguese: {{t+|pt|coisa|f}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f|tr=veščʹ|sc=Cyrl}}, {{t+|ru|нечто|n|tr=néčto|sc=Cyrl}}, {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
@@ -178,6 +178,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-bottom}}
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
+* Polish: {{t+|pl|coś|n}}
 {{trans-mid}}
 {{trans-bottom}}
 
