--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -149,7 +149,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Old Church Slavonic: {{t|cu|вєшть|f|tr=veštĭ|sc=Cyrs}}
 * Old English: {{t|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
-* Polish: {{t+|pl|rzecz|f}}, {{t+|pl|przedmiot|m}}, {{t+|pl|coś|n}}
+* Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
 * Portuguese: {{t+|pt|coisa|f}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f|tr=veščʹ|sc=Cyrl}}, {{t+|ru|нечто|n|tr=néčto|sc=Cyrl}}, {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
@@ -184,8 +184,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 
 {{trans-top|individual object or distinct entity}}
 * Asturian: {{t|ast|cosa|f}}
-* Finnish: {{t+|fi|esine}}
 {{trans-mid}}
+* Finnish: {{t+|fi|esine}}
 {{trans-bottom}}
 
 {{trans-top|law: whatever can be owned}}
@@ -230,8 +230,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 {{trans-top|that which matters; the crux}}
 * Asturian: {{t|ast|cosa|f}}
 * Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
-* German: {{t|de|Sache|f}}
 {{trans-mid}}
+* German: {{t|de|Sache|f}}
 {{trans-bottom}}
 
 {{trans-top|situation surrounding a noun's referent}}
