t+an:[[esquirgüelo]] ([[WT:EDIT|Assisted]]) <squirrel#31834571>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -28,6 +28,7 @@ From {{etyl|fro|en}} {{m|fro|esquirel}}, {{m|fro|escurel}} (whence {{etyl|fr|-}}
 * Albanian: {{t|sq|ketër|m}}
 * Algonquin: {{t|alq|adjidamò}}
 * Arabic: {{t|ar|سنجاب|m|tr=sinjāb}}
+* Aragonese: {{t|an|esquirgüelo|m}}
 * Armenian: {{t|hy|սկյուռ}}
 *: Old Armenian: {{t|xcl|սկիւռ}}
 * Aromanian: {{t|rup|viviritsã|f}}
