--- a/en/h/hydrozoan.801199.wikitext
+++ b/en/h/hydrozoan.801199.wikitext
@@ -5,6 +5,15 @@
 
 # {{context|biology|lang=en}} Any of many [[colonial]] [[coelenterate]]s, of the class ''[[Hydrozoa]]'', including the [[hydra]]s, [[hydroid]]s, [[hydrocoral]]s, and [[siphonophore]]s.
 
+====Translations====
+{{trans-top|colonial coelenterates of the class ''Hydrozoa''}}
+* Chinese: 
+*: Mandarin: {{t|cmn|水螅蟲類|sc=Hani}}, {{t|cmn|水螅虫类|tr=shuǐxī chónglèi|sc=Hani}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Russian: {{t-needed|ru}}
+{{trans-bottom}}
+
 [[ku:hydrozoan]]
 [[ta:hydrozoan]]
 [[vi:hydrozoan]]
