t+ru:[[гидрозой]] ([[WT:EDIT|Assisted]]) <hydrozoan#31897921>

--- a/en/h/hydrozoan.801199.wikitext
+++ b/en/h/hydrozoan.801199.wikitext
@@ -11,7 +11,7 @@
 *: Mandarin: {{t|cmn|水螅蟲類|sc=Hani}}, {{t|cmn|水螅虫类|tr=shuǐxī chónglèi|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t|fi|polyyppieläin}}
-* Russian: {{t-needed|ru}}
+* Russian: {{t+|ru|гидрозо́й|m|sc=Cyrl}}
 {{trans-bottom}}
 
 [[ku:hydrozoan]]
