--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 {{wikipedia|yes and no}}
-From a variation of {{term|yea|lang=en}}, itself from {{etyl|enm|en}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang|en}} {{m|ang|ġēa||yes}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*ja||yes; thus, so}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*yē||already}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}}, Danish {{term|ja|lang=da}}, Bokmål {{term|ja|lang=nb}}, New Norwegian {{term|ja|lang=nn}} and Swedish {{term|ja|lang=sv}}.<ref>The American Heritage Dictionary of the English Language, Fourth Edition, 2000</ref> Interestingly, modern "yeah" maintains nearly the same pronunciation as its Old English ancestor (Old English "ġēa" being /jæːɑ/, Modern English "yeah" being /jɛə̯/ or /jæə̯/) and consequently has really no other words that rhyme with it in rhotic dialects. The reason behind its real lack of pronunciation shift is unknown, as other words that had similar pronunciations in Old English did shift in pronunciation. It is possible that, due to its constant use (and its never being accepted as a formal term), its pronunciation has remained rigidly in place. Compare [[father]] which oddly has a pronunciation almost identical to its Proto-Germanic ancestor.
+From a variation of {{term|yea|lang=en}}, itself from {{etyl|enm|en}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang|en}} {{m|ang|ġēa||yes}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*ja||yes; thus, so}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*yē||already}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}}, Danish {{term|ja|lang=da}}, Bokmål {{term|ja|lang=nb}}, Nynorsk {{term|ja|lang=nn}} and Swedish {{term|ja|lang=sv}}.<ref>The American Heritage Dictionary of the English Language, Fourth Edition, 2000</ref> Interestingly, modern "yeah" maintains nearly the same pronunciation as its Old English ancestor (Old English "ġēa" being /jæːɑ/, Modern English "yeah" being /jɛə̯/ or /jæə̯/) and consequently has really no other words that rhyme with it in rhotic dialects. The reason behind its real lack of pronunciation shift is unknown, as other words that had similar pronunciations in Old English did shift in pronunciation. It is possible that, due to its constant use (and its never being accepted as a formal term), its pronunciation has remained rigidly in place. Compare [[father]] which oddly has a pronunciation almost identical to its Proto-Germanic ancestor.
 
 Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunciation of {{term|yes|lang=en}}. For further etymology, see {{l|en|yes}}.<ref>Webster's Third New International Dictionary, Unabridged. 2003.</ref>
 
