--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -25,7 +25,7 @@
 * Hebrew: {{t-needed|he}}
 * Japanese: {{t|ja|個人崇拝|tr=こじんすうはい, kojin sūhai|sc=Jpan}}
 * Korean: {{t|ko|개인숭배|sc=Kore}}
-* Latvian: {{t-needed|lv}}
+* Latvian: {{t|lv|personības kults|m}}
 * Lithuanian: {{t-needed|lt}}
 * Polish: {{t-needed|pl}}
 * Romanian: {{t-needed|ro}}
