--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -358,7 +358,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Greek: {{t+|el|απομονώνω|sc=Grek}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|isolar}}
-* Russian: {{t+|ru|изоли́ровать|pf, impf}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
+* Russian: {{t+|ru|изоли́ровать}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
 {{trans-bottom}}
 
 ===See also===
