t+vi:[[tù binh]] ([[WT:EDIT|Assisted]]) <prisoner of war#31924681>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -37,6 +37,7 @@
 * Swedish: {{t+|sv|krigsfånge}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ|tr=yuddha khaidee}}
 * Ukrainian: {{t+|uk|бранець|m|tr=bránec'}}
+* Vietnamese: {{t+|vi|tù binh}}
 * Volapük: {{t|vo|kligafanäböpäb}}
 {{trans-bottom}}
 
