--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -81,8 +81,9 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Korean: {{t+|ko|광고|sc=Hang}} ({{t+|ko|廣告|sc=Hani}})
 * Kyrgyz: {{t+|ky|жарнама}}
 * Latin: {{t|la|prescriptio|f}}
-* Lithuanian: {{t|lt|reklama}}
+* Latvian: {{t|lv|reklāma|f}}
 {{trans-mid}}
+* Lithuanian: {{t|lt|reklama}}
 * Macedonian: {{t|mk|рекла́ма|f}}
 * Malay: {{t|ms|iklan}}
 * Maltese: {{t|mt|riklam}}, {{t|mt|pubbliċità}}, {{t|mt|tgħarif kummerċjali}}
