--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -134,7 +134,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|다시|sc=Kore}}, {{t+|ko|또|sc=Kore}}
-* Kurdish:
+* Kurdish: {{t+|ku|dîsa|sc=ku-Arab}}
 *: Sorani: {{t+|ku|دیسان}}, {{t|ku|هه‌مدیس}}, {{t|ku|دوباره‌}}
 * Lao: {{t|lo|ອີກ|tr='iik|sc=Laoo}}
 * Latin: {{t|la|denuo}}, {{t|la|iterum}}
